[gd_scene load_steps=20 format=3 uid="uid://1xlbegfmg65d"]

[ext_resource type="Script" path="res://scripts/Bot.gd" id="1_0an7d"]
[ext_resource type="PackedScene" uid="uid://bjehaep4xmt3c" path="res://prefabs/bot_model.tscn" id="2_y3rjh"]
[ext_resource type="Material" uid="uid://5ikr8dl3gf0d" path="res://materials/test.material" id="3_e147w"]
[ext_resource type="AnimationLibrary" uid="uid://c33w2uu14i1fb" path="res://meshes/playeranims.glb" id="4_q5ot3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bo71e"]
no_depth_test = true
shading_mode = 0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qmixw"]
radius = 1.00449
height = 4.82426

[sub_resource type="BoxShape3D" id="BoxShape3D_sioav"]
size = Vector3(12.8984, 23.9078, 14.8733)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mlw0r"]
animation = &"playeranims/Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vdjdj"]
animation = &"playeranims/RacketHold"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vl02x"]
animation = &"playeranims/RacketSwing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gk47n"]
animation = &"playeranims/Throw"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uy41n"]
animation = &"playeranims/Idle"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_v7dkl"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Bone.003.R", "Armature/Skeleton3D:Bone.004.R"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_un7uq"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Bone.003.R", "Armature/Skeleton3D:Bone.004.R"]
fadeout_time = 0.2

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_vagdm"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Bone.003.L", "Armature/Skeleton3D:Bone.004.L"]
fadeout_time = 0.1

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_8sbg3"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_r5sud"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_qg37g"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Bone", "Armature/Skeleton3D:Bone.016.L", "Armature/Skeleton3D:Bone.016.R", "Armature/Skeleton3D:Bone.017.L", "Armature/Skeleton3D:Bone.017.R", "Armature/Skeleton3D:Bone.018.L", "Armature/Skeleton3D:Bone.018.R"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_4s4sa"]
graph_offset = Vector2(-788, 143)
nodes/Animation/node = SubResource("AnimationNodeAnimation_uy41n")
nodes/Animation/position = Vector2(-1120, -380)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_mlw0r")
"nodes/Animation 2/position" = Vector2(-480, 200)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_vdjdj")
"nodes/Animation 3/position" = Vector2(-760, 80)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_vl02x")
"nodes/Animation 4/position" = Vector2(-880, -60)
"nodes/Animation 5/node" = SubResource("AnimationNodeAnimation_gk47n")
"nodes/Animation 5/position" = Vector2(-1120, -220)
nodes/RacketHold/node = SubResource("AnimationNodeOneShot_v7dkl")
nodes/RacketHold/position = Vector2(-360, -60)
nodes/RacketSwing/node = SubResource("AnimationNodeOneShot_un7uq")
nodes/RacketSwing/position = Vector2(-620, -200)
nodes/Throw/node = SubResource("AnimationNodeOneShot_vagdm")
nodes/Throw/position = Vector2(-880, -340)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_8sbg3")
nodes/TimeScale/position = Vector2(-520, 40)
nodes/WalkScale/node = SubResource("AnimationNodeTimeScale_r5sud")
nodes/WalkScale/position = Vector2(-260, 200)
nodes/WalkSpeed/node = SubResource("AnimationNodeBlend2_qg37g")
nodes/WalkSpeed/position = Vector2(-100, 100)
nodes/output/position = Vector2(160, 140)
node_connections = [&"RacketHold", 0, &"RacketSwing", &"RacketHold", 1, &"TimeScale", &"RacketSwing", 0, &"Throw", &"RacketSwing", 1, &"Animation 4", &"Throw", 0, &"Animation", &"Throw", 1, &"Animation 5", &"TimeScale", 0, &"Animation 3", &"WalkScale", 0, &"Animation 2", &"WalkSpeed", 0, &"RacketHold", &"WalkSpeed", 1, &"WalkScale", &"output", 0, &"WalkSpeed"]

[node name="Bot" type="CharacterBody3D" groups=["Bot"]]
script = ExtResource("1_0an7d")

[node name="Debug_Dest" type="CSGSphere3D" parent="."]
transform = Transform3D(0.55, 0, 0, 0, 0.55, 0, 0, 0, 0.55, 0, 1.40104, 0.0206308)
material = SubResource("StandardMaterial3D_bo71e")

[node name="Username" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.50246, 0)
pixel_size = 0.001
billboard = 1
double_sided = false
no_depth_test = true
fixed_size = true
text = "Computer
"

[node name="playermodel" parent="." instance=ExtResource("2_y3rjh")]
transform = Transform3D(0.65, 0, 0, 0, 0.65, 0, 0, 0, 0.65, 0, 1.40104, 0.0206308)

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38143, 0)
shape = SubResource("CapsuleShape3D_qmixw")

[node name="plrangletarget" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40104, 0.0206308)

[node name="Ball" type="CSGSphere3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.0213909, 2.09325, -0.0132618)

[node name="RacketArea" type="Area3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.0213909, 2.2119, -0.0132618)
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RacketArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.20022, -2.86776)
shape = SubResource("BoxShape3D_sioav")

[node name="CSGBox3D" type="CSGBox3D" parent="RacketArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.20022, -2.86776)
visible = false
size = Vector3(12.8984, 23.9078, 14.8733)
material = ExtResource("3_e147w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../playermodel")
libraries = {
"playeranims": ExtResource("4_q5ot3")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
root_node = NodePath("../playermodel")
tree_root = SubResource("AnimationNodeBlendTree_4s4sa")
anim_player = NodePath("../AnimationPlayer")
parameters/RacketHold/active = false
parameters/RacketHold/internal_active = false
parameters/RacketHold/request = 0
parameters/RacketSwing/active = false
parameters/RacketSwing/internal_active = false
parameters/RacketSwing/request = 0
parameters/Throw/active = false
parameters/Throw/internal_active = false
parameters/Throw/request = 0
parameters/TimeScale/scale = 1.5
parameters/WalkScale/scale = 1.0
parameters/WalkSpeed/blend_amount = 1.0

[node name="Sprint" type="Timer" parent="."]
one_shot = true

[node name="RacketCooldown" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[connection signal="timeout" from="Sprint" to="." method="_on_sprint_timeout"]
[connection signal="timeout" from="RacketCooldown" to="." method="_on_racket_cooldown_timeout"]
